refactor: renamed project variables

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
+displayName=Compass Camera control
+author=Khoshnood
+support=https://github.com/RaazKH/CompassCameraControl
+description=Clicking on compass will do more than just face camera north
+tags=Camera, Accessibility
 plugins=com.example.ExamplePlugin
