feat: clicking on compass cycles through cardinal directions

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=Khoshnood
 support=https://github.com/RaazKH/CompassCameraControl
 description=Clicking on compass will do more than just face camera north
 tags=Camera, Accessibility
-plugins=com.example.ExamplePlugin
+plugins=com.compassCameraControl.Compass Camera ControlPlugin
