--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('shadowJar', Jar) {
 	dependsOn configurations.testRuntimeClasspath
 	manifest {
-		attributes('Main-Class': 'com.compassCameraControl.CompassCameraControlPluginTest', 'Multi-Release': true)
+		attributes(
+				'Main-Class': 'com.compassCameraControl.CompassCameraControlPluginTest',
+				'Multi-Release': true
+		)
 	}
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
