fix: space in plugin.properties plugins name

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Compass Camera control
 author=Khoshnood
 support=https://github.com/RaazKH/CompassCameraControl
 description=Clicking on compass will do more than just face camera north
-tags=Camera, Accessibility
-plugins=com.compassCameraControl.Compass Camera ControlPlugin
+tags=camera, compass, control, navigation, usability, convenience
+plugins=com.compassCameraControl.CompassCameraControlPlugin
