--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Compass Camera control
-author=Khoshnood
+author=Raaz
 support=https://github.com/RaazKH/CompassCameraControl
-description=Clicking on compass will do more than just face camera north
+description=Expands compass functionality
 tags=camera, compass, control, navigation, usability, convenience
 plugins=com.compassCameraControl.CompassCameraControlPlugin
