--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,4 +1,4 @@
-displayName=Compass Camera control
+displayName=Compass Camera Control
 author=Raaz
 support=https://github.com/RaazKH/CompassCameraControl
 description=Expands compass functionality
